# aos-similator

./: .gitignore  README.md  pyproject.toml
aos_sim/: calculator.py  cli.py  loader.py  models.py  simulator.py
data/factions/: skaven_gnawfeast.json  skaven_warpspark.json  soublight_bloodcrave.json  soublight_deathrattle.json  stormcast_vigilant.json  stormcast_yndrasta.json  sylvaneth_spitewing.json
data/mds/: skaven_gnawfeast.md  skaven_warpspark.md  soulblight_bloodcrave.md  soulblight_deathrattle.md  stormcast_vigilant.md  stormcast_yndrasta.md  sylvaneth_spitewing.md
