[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "aos-sim"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "typer>=0.12",
    "rich>=13",
    "pypdf>=6.13.3",
]

[project.scripts]
aos-sim = "aos_sim.cli:app"

[tool.setuptools.packages.find]
where = ["."]
include = ["aos_sim*"]
